# snake_game_forcedtomake

./: .gitignore  CMakeLists.txt  CONVERSION_COMPLETE.md  QUICK_START.md  README.md  WEB_BUILD_SETUP.md  build.sh  index.html
cpp/src/: Audio.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Story.cpp  Story.h  UI.cpp
snake/: package-lock.json  package.json
snake/cpp/: CMakeLists.txt
snake/cpp/src/: Arena.h  Renderer4D.cpp  Renderer4D.h
snake/src/: main.js
snake/src/engine/: ContinuousSnake.js  Food.js  InfiniteArena.js  Snake.js
snake/src/renderers/: Renderer2D.js  Renderer3D.js
snake/src/styles/: main.css
snake/src/ui/: GameOver.js  HUD.js  MainMenu.js
src/: Audio.h  Game.cpp  Snake.cpp
src/audio/: AudioManager.js
src/engine/: Arena.js  GameEngine.js  StoryManager.js
src/renderers/: Renderer4D.js
src_cpp_backup/: Arena.cpp  Game.h  Renderer2D.cpp  Snake.h  UI.h
web/: shell.html
